chore(api): add logout api
